--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": [
               "zone.js"
             ],
+            "externalDependencies": ["assets/footer.png"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "sass",
             "assets": [
