--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^17.0.7",
     "bootstrap-icons": "^1.11.2",
     "express": "^4.18.2",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
