--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "express": "^4.18.2",
     "ngx-perfect-scrollbar": "^10.1.1",
